--- a/.gitignore
+++ b/.gitignore
@@ -48,3 +48,4 @@ Temporary Items
 msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
 msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
 msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
+msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
