--- a/.gitignore
+++ b/.gitignore
@@ -49,3 +49,4 @@ msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
 msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
 msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
 msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
+msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
