--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,4 @@ msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
 msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
 msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
 msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
+msvc/src/applications/osgearth_viewer/application_osgearth_viewer.vcxproj.user
